# indri-http-server

./: .gitignore  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
src/: IndriJSONServer.cpp  Makefile.am  Makefile.in
test/: Makefile.in
